--- a/SampleCodeForAssignment/app.yaml
+++ b/SampleCodeForAssignment/app.yaml
@@ -2,7 +2,7 @@ runtime: python37
 
 handlers:
  # This configures Google App Engine to serve the files in the app's 
-static
+static:
  # directory.
  - url: /static
  static_dir: static
