--- a/SampleCodeForAssignment/app.yaml
+++ b/SampleCodeForAssignment/app.yaml
@@ -4,8 +4,8 @@ handlers:
  # This configures Google App Engine to serve the files in the app's 
 static:
  # directory.
- - url: /static
- static_dir: static
+#  - url: /static
+#  static_dir: static
 
 
 - url: /.*
