--- a/SampleCodeForAssignment/app.yaml
+++ b/SampleCodeForAssignment/app.yaml
@@ -1,12 +1,12 @@
 runtime: python37
 
-handlers:
+# handlers:
  # This configures Google App Engine to serve the files in the app's 
-static:
+# static:
  # directory.
 #  - url: /static
 #  static_dir: static
 
 
 # - url: /.*
-script: auto
+# script: auto
