--- a/SampleCodeForAssignment/app.yaml
+++ b/SampleCodeForAssignment/app.yaml
@@ -1,12 +1,5 @@
-runtime: python37
-
-# handlers:
- # This configures Google App Engine to serve the files in the app's 
-# static:
- # directory.
-#  - url: /static
-#  static_dir: static
-
-
-# - url: /.*
-# script: auto
+runtime: python
+vm: true
+entrypoint: gunicorn -b : $PORT main:app
+runtime_config :
+  python_version: 3
